--- a/myApp/src/app/app.component.html
+++ b/myApp/src/app/app.component.html
@@ -1,1 +1,5 @@
-<app-header></app-header> <app-body></app-body>
+<!-- <app-header></app-header>
+<app-body></app-body> -->
+
+<!-- <app-class-databinding></app-class-databinding> -->
+<app-class-directives></app-class-directives>
