--- a/myApp/src/app/app.component.html
+++ b/myApp/src/app/app.component.html
@@ -2,4 +2,5 @@
 <app-body></app-body> -->
 
 <!-- <app-class-databinding></app-class-databinding> -->
-<app-class-directives></app-class-directives>
+<!-- <app-class-directives></app-class-directives> -->
+<app-class-att-directive></app-class-att-directive>
