--- a/myApp/src/app/app.component.html
+++ b/myApp/src/app/app.component.html
@@ -3,4 +3,9 @@
 
 <!-- <app-class-databinding></app-class-databinding> -->
 <!-- <app-class-directives></app-class-directives> -->
-<app-class-att-directive></app-class-att-directive>
+<!-- <app-class-att-directive></app-class-att-directive> -->
+
+<!-- example 1 -->
+<!-- <app-product></app-product> -->
+<!-- exapmple 2 -->
+<app-products></app-products>
