--- a/myApp/src/app/class3-directives/class-directives.component.html
+++ b/myApp/src/app/class3-directives/class-directives.component.html
@@ -19,7 +19,7 @@
 <hr />
 
 <div [ngSwitch]="age">
-  <div *ngSwitchCase="age <= 3">infant</div>
+  <div *ngSwitchCase="3">infant</div>
   <div *ngSwitchCase="age <= 13">Kid</div>
   <div *ngSwitchCase="age <= 19">teen</div>
   <div *ngSwitchCase="age > 19">adult</div>
