--- a/myApp/src/app/app.component.html
+++ b/myApp/src/app/app.component.html
@@ -8,4 +8,9 @@
 <!-- example 1 -->
 <!-- <app-product></app-product> -->
 <!-- exapmple 2 -->
-<app-products></app-products>
+<!-- <app-products></app-products> -->
+
+<!-- <app-lifecycle [name]="'raj'" *ngIf="show"> data from content </app-lifecycle>
+<button (click)="onClick()">hide</button> -->
+
+<app-class5-view-child></app-class5-view-child>
