--- a/myApp/src/app/app.component.html
+++ b/myApp/src/app/app.component.html
@@ -13,4 +13,6 @@
 <!-- <app-lifecycle [name]="'raj'" *ngIf="show"> data from content </app-lifecycle>
 <button (click)="onClick()">hide</button> -->
 
-<app-class5-view-child></app-class5-view-child>
+<!-- <app-class5-view-child></app-class5-view-child> -->
+
+<app-main></app-main>
