--- a/myApp/src/app/class5-lifecycle/lifecycle/lifecycle.component.html
+++ b/myApp/src/app/class5-lifecycle/lifecycle/lifecycle.component.html
@@ -22,7 +22,7 @@ Input - {{ name }}<br />
       ngAfterContentChecked - called every time (ng-content) projected in view
     </li>
     <li class="list-group-item">
-      ngOnViewInit - called once the view of the component is initialized
+      ngAfterViewInit - called once the view of the component is initialized
     </li>
     <li class="list-group-item">
       ngOnViewChecked - called every time the view has any changes
