--- a/myApp/src/app/class5-view-child/class5-view-child.component.html
+++ b/myApp/src/app/class5-view-child/class5-view-child.component.html
@@ -1,3 +1,9 @@
 Name: <input type="text" #nm /><br />
+
 <button (click)="getName(nm)">get Name</button>
 <button (click)="getMyName()">get Name</button>
+
+<hr />
+
+<div #box>hello</div>
+<button (click)="chBg()">red</button>
