--- a/myApp/src/app/class7-routes/home/home.component.html
+++ b/myApp/src/app/class7-routes/home/home.component.html
@@ -65,6 +65,16 @@
             Categories
           </a>
         </li>
+        <li class="nav-item">
+          <a
+            class="nav-link"
+            aria-current="page"
+            [routerLink]="['login']"
+            routerLinkActive="focus"
+          >
+            Login
+          </a>
+        </li>
       </ul>
       <form class="d-flex">
         <input
