--- a/myApp/src/app/app.component.html
+++ b/myApp/src/app/app.component.html
@@ -17,4 +17,8 @@
 
 <!-- <app-main></app-main> -->
 
+<!-- routes -->
 <app-home></app-home>
+
+<!-- observables -->
+<!-- <app-observables></app-observables> -->
