--- a/myApp/src/app/class7-routes/home/home.component.html
+++ b/myApp/src/app/class7-routes/home/home.component.html
@@ -95,6 +95,16 @@
             custom Observable
           </a>
         </li>
+        <li class="nav-item">
+          <a
+            class="nav-link"
+            aria-current="page"
+            [routerLink]="['td-form']"
+            routerLinkActive="focus"
+          >
+            TD Forms
+          </a>
+        </li>
       </ul>
       <!-- <form class="d-flex">
         <input
