--- a/myApp/src/app/class7-routes/home/home.component.html
+++ b/myApp/src/app/class7-routes/home/home.component.html
@@ -105,6 +105,16 @@
             TD Forms
           </a>
         </li>
+        <li class="nav-item">
+          <a
+            class="nav-link"
+            aria-current="page"
+            [routerLink]="['reactive-form']"
+            routerLinkActive="focus"
+          >
+            Reactive Forms
+          </a>
+        </li>
       </ul>
       <!-- <form class="d-flex">
         <input
