--- a/myApp/src/app/class7-routes/home/home.component.html
+++ b/myApp/src/app/class7-routes/home/home.component.html
@@ -115,6 +115,16 @@
             Reactive Forms
           </a>
         </li>
+        <li class="nav-item">
+          <a
+            class="nav-link"
+            aria-current="page"
+            [routerLink]="['pipes']"
+            routerLinkActive="focus"
+          >
+            Pipes
+          </a>
+        </li>
       </ul>
       <!-- <form class="d-flex">
         <input
