--- a/myApp/src/app/class7-routes/reactive-forms/reactive-forms.component.html
+++ b/myApp/src/app/class7-routes/reactive-forms/reactive-forms.component.html
@@ -14,7 +14,7 @@
   </span> -->
   <br />
   Email:<input type="text" formControlName="email" />
-  <span>{{ myForm.get("email")?.errors | json }}</span>
+  <!-- <span>{{ myForm.get("email")?.errors | json }}</span> -->
   <br />
   Age:<input type="text" formControlName="age" /><br />
   Gender:
