--- a/myApp/src/app/class7-routes/home/home.component.html
+++ b/myApp/src/app/class7-routes/home/home.component.html
@@ -125,6 +125,16 @@
             Pipes
           </a>
         </li>
+        <li class="nav-item">
+          <a
+            class="nav-link"
+            aria-current="page"
+            [routerLink]="['products']"
+            routerLinkActive="focus"
+          >
+            Products
+          </a>
+        </li>
       </ul>
       <!-- <form class="d-flex">
         <input
