--- a/myApp/src/app/products/list-product/list-product.component.html
+++ b/myApp/src/app/products/list-product/list-product.component.html
@@ -4,7 +4,10 @@
 <div class="container">
   <div class="row">
     <div class="col-2">
-      <ul class="list-group" *ngFor="let p of dbProducts; let i = index">
+      <ul
+        class="list-group"
+        *ngFor="let p of dbProducts | async; let i = index"
+      >
         <li
           class="list-group-item"
           routerLink="view-product"
